deployments/phpldapadmin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: phpldapadmin
    app.kubernetes.io/component: phpldapadmin
    app.kubernetes.io/instance: phpldapadmin
  name: phpldapadmin
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: phpldapadmin
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        deployment: phpldapadmin
    spec:
      containers:
      - env:
        - name: PHPLDAPADMIN_HTTPS
          value: "false"
        - name: PHPLDAPADMIN_LDAP_HOSTS
          value: openldap.openldap.svc.cluster.local
        image: docker.io/osixia/phpldapadmin@sha256:79ab716881d78192442873d7c64034d849496111d465d1fb1e8c15cc4a3d569a
        imagePullPolicy: IfNotPresent
        name: phpldapadmin
        ports:
        - containerPort: 443
          protocol: TCP
        - containerPort: 80
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/www/phpldapadmin
          name: phpldapadmin-volume-1
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: phpldap
      serviceAccountName: phpldap
      terminationGracePeriodSeconds: 30
      volumes:
      - emptyDir: {}
        name: phpldapadmin-volume-1
