deployments/phpldapadmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: phpldapadmin
    app.kubernetes.io/component: phpldapadmin
    app.kubernetes.io/instance: phpldapadmin
  name: phpldapadmin
spec:
  ports:
  - name: 80-tcp
    port: 80
    protocol: TCP
    targetPort: 80
  - name: 443-tcp
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    deployment: phpldapadmin
  type: ClusterIP
